Fixed text alignment and added background texture

--- a/_sass/port-theme/_header.scss
+++ b/_sass/port-theme/_header.scss
@@ -30,6 +30,8 @@
         
         .bg {
             // background: linear-gradient(120deg, #4CA0B9 0%, #A5D491 100%);
+            background-image: $hashed-background;
+            opacity: .4;
             position: absolute;
             z-index: -10;
             width: 100%;
@@ -91,6 +93,7 @@
             #name {
                 margin-top: 0;
                 margin-bottom: 1rem;
+                padding-bottom: .25rem;
 
                 text-decoration: none;
                 background-image: linear-gradient(120deg, #4CA0B9 0%, #A5D491 100%);
@@ -113,8 +116,8 @@
                 // @media screen and (max-width: 700px) and (orientation: landscape) {
                 //     display: none;
                 // }
-                @media screen and (min-width: 400px) {
-                    margin-top: 2rem;
+                @media all and (min-width: 400px) {
+                    margin-top: 1.5rem;
                 }
             }
 
@@ -155,6 +158,7 @@
                         overflow: hidden;
                         display: inline-block;
                         position: relative;
+                        vertical-align: bottom;
                         // bottom: -.6rem;
                         text-align: left;
                         font-weight: 300;
@@ -175,17 +179,17 @@
                             }
                         }
 
-                        &:after {
-                            /* line */
-                            content: '';
-                            position: absolute;
-                            bottom: 0;
-                            right: 0;
-                            width: 2px;
-                            height: 100%;
-                            background-color: $teal;
-                            opacity: 0.6;
-                        }
+                        // &:after {
+                        //     /* line */
+                        //     content: '';
+                        //     position: absolute;
+                        //     bottom: 0;
+                        //     right: 0;
+                        //     width: 2px;
+                        //     height: 100%;
+                        //     background-color: $teal;
+                        //     opacity: 0.6;
+                        // }
                     }
                 }              
             }
