--- a/_sass/port-theme/_pagenav.scss
+++ b/_sass/port-theme/_pagenav.scss
@@ -20,7 +20,7 @@
         width: 100%;
         height: 60px;
         z-index: 100;
-        background: linear-gradient(120deg, #5FABB0 0%, #A4D391 100%);
+        background-image: $hashed-background;
         ;
         @media (max-width: 700px) {
             padding: .25rem 0;
