--- a/_sass/port-theme/_theme-default.scss
+++ b/_sass/port-theme/_theme-default.scss
@@ -12,3 +12,5 @@ $header-text-color-secondary: #C9F299;
 $text-grey: #8a8a8a;
 $divider: #e8e8e8;
 $lighter-grey: #ccc;
+
+$hashed-background: url('images/grid_noise.png');
